Solucionamos errores al ver la lista de productos en panel admin

--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -328,7 +328,7 @@ main{
             }
         }
     }
-    .productList{
+    #productList{
         display: none;
         overflow-y: scroll;
         overflow-x: hidden;
