--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -351,16 +351,16 @@ main #addProduct form button, main #productList form button {
 main #addProduct form button:hover, main #productList form button:hover {
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
-main .productList {
+main #productList {
   display: none;
   overflow-y: scroll;
   overflow-x: hidden;
   gap: 5px;
 }
-main .productList h3 {
+main #productList h3 {
   height: 20px;
 }
-main .productList .product {
+main #productList .product {
   width: 100%;
   height: 100%;
   display: flex;
@@ -369,7 +369,7 @@ main .productList .product {
   align-items: center;
   gap: 5px;
 }
-main .productList .product div {
+main #productList .product div {
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -379,7 +379,7 @@ main .productList .product div {
   gap: 5px;
   border-bottom: 1px solid black;
 }
-main .productList .product div h4, main .productList .product div h2 {
+main #productList .product div h4, main #productList .product div h2 {
   width: 100%;
   height: 100%;
   display: flex;
@@ -387,7 +387,7 @@ main .productList .product div h4, main .productList .product div h2 {
   flex-direction: column;
   align-items: center;
 }
-main .productList .product div p {
+main #productList .product div p {
   width: 100%;
   height: 100%;
   font-size: 16px;
@@ -397,14 +397,14 @@ main .productList .product div p {
   align-items: center;
   box-shadow: none;
 }
-main .productList .product div img {
+main #productList .product div img {
   width: auto;
   height: 100px;
 }
-main .productList .product .product-buttons {
+main #productList .product .product-buttons {
   width: 350px;
 }
-main .productList .product .product-buttons button {
+main #productList .product .product-buttons button {
   padding: 2px;
   border: 0px solid #e3e3e3;
   border-radius: 5px;
