--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -381,6 +381,64 @@ main .category div {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+main .category #productos-bolsos, main .category #productos-tenis {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 5px;
+}
+main .category #productos-bolsos div, main .category #productos-tenis div {
+  width: 170px;
+  height: 250px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+main .category #productos-bolsos div div, main .category #productos-tenis div div {
+  width: 100%;
+  height: 100%;
+}
+main .category #productos-bolsos div div span, main .category #productos-tenis div div span {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 14px;
+  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+}
+main .category #productos-bolsos div div span:first-child, main .category #productos-tenis div div span:first-child {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+main .category #productos-bolsos div div span:nth-child(2), main .category #productos-tenis div div span:nth-child(2) {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+}
+main .category p {
+  width: 90%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-items: flex-start;
+}
 main #whatsapp {
   width: 60px;
   height: auto;
