--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -402,7 +402,7 @@ main .category #productos-bolsos div, main .category #productos-tenis div {
   align-items: center;
   box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 main .category #productos-bolsos div div, main .category #productos-tenis div div {
@@ -417,7 +417,7 @@ main .category #productos-bolsos div div span, main .category #productos-tenis d
   flex-direction: column;
   align-items: center;
   font-size: 14px;
-  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main .category #productos-bolsos div div span:first-child, main .category #productos-tenis div div span:first-child {
   border-bottom-left-radius: 20px;
