--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -574,6 +574,29 @@ main #categoriesSection #contact div:nth-child(3) ul li {
   font-weight: 600;
   font-size: 22px;
 }
+main .sectionForm {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+main .sectionForm form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  height: 200px;
+  border-radius: 20px;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+}
 main #whatsapp {
   width: 80px;
   height: auto;
