--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -530,6 +530,8 @@ main{
         bottom: 0px;
         left: 0px;
         right: 0px;
+        z-index: 12000;
+        display: none;
 
         form{
             @include displayFlex();
