--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -595,9 +595,62 @@ main .sectionForm form {
   flex-direction: column;
   align-items: center;
   width: 80%;
-  height: 200px;
+  height: 300px;
   border-radius: 20px;
+  border: 1px solid #414141;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  gap: 5px;
+}
+main .sectionForm form #errorMessage {
+  display: none;
+}
+main .sectionForm form input {
+  width: 90%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 10px;
+  font-family: "Afacad Flux", sans-serif;
+}
+main .sectionForm form button {
+  padding: 5px;
+  border: 1px solid #353535;
+  border-radius: 30px;
+  transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
+  width: 90%;
+  height: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  color: #353535;
+  cursor: pointer;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  box-shadow: none;
+}
+main .sectionForm form button:hover {
+  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+}
+main .sectionForm button {
+  margin-top: -50px;
+  padding: 5px;
+  border: 1px solid #353535;
+  border-radius: 30px;
+  transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
+  width: 25%;
+  height: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  color: #353535;
+  cursor: pointer;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+}
+main .sectionForm button:hover {
+  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
 }
 main #whatsapp {
   width: 80px;
