--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,5 +1,5 @@
 //Variables
-$backgroundImage: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+$backgroundImage: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
 $secondBackgroundImage: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $lightBackgroundImage: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
@@ -544,22 +544,27 @@ main{
             #errorMessage{
                 display: none;
             }
+            p{
+                font-size: $lg;
+            }
             input{
-                @include sizes(90%,30px);
+                @include sizes(90%,40px);
                 @include displayFlex();
                 padding-left: 10px;
+                font-size: $lg;
                 font-family: $afacadFont;
             }
             button{
                 @include buttonDesign(90%);
                 box-shadow: none;
+                margin-top: 0px;
             }
             button:hover{
                 background-image: $backgroundImage;
             }
         }
         button{
-            margin-top: -50px;
+            margin-top: -60px;
             @include buttonDesign(25%);
         }
         button:hover{
