--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -224,6 +224,7 @@ nav{
             cursor: pointer;
             transition: all 0.3s ease;
             backdrop-filter: blur(5px);
+            font-size: $lg;
 
             img{
                 @include sizes(30px,auto);
@@ -243,7 +244,7 @@ nav{
             color: $secondBackgroundImage;
             background-color: transparent;
             font-weight: $bold;
-            font-size: $md;
+            font-size: $lg;
             cursor: default;
         }
     }
