Arreglamos boton regresar en el login

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -351,7 +351,7 @@ main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCat
   align-items: center;
   align-items: flex-start;
   padding-left: 10px;
-  font-size: 4vw;
+  font-size: 22px;
   font-weight: 400;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
