--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -247,7 +247,7 @@ main #standarSection {
   display: flex;
 }
 main #standarSection img {
-  width: 50%;
+  width: 300px;
   height: auto;
   animation: heartAnimation 5s ease infinite;
 }
@@ -356,7 +356,7 @@ main #productList {
   overflow-y: scroll;
   overflow-x: hidden;
   gap: 5px;
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main #productList h3 {
   height: 20px;
@@ -445,7 +445,7 @@ main #editForm h2 {
   flex-direction: column;
   align-items: center;
   align-items: flex-start;
-  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   padding-left: 10px;
 }
 main #editForm form {
