--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -252,7 +252,6 @@ main #standarSection img {
   animation: heartAnimation 5s ease infinite;
 }
 main #addProduct, main #productList {
-  border: 2px solid rgb(180, 200, 255);
   width: 100%;
   height: 600px;
   display: flex;
@@ -260,7 +259,6 @@ main #addProduct, main #productList {
   flex-direction: column;
   align-items: center;
   display: none;
-  border-radius: 10px;
 }
 main #addProduct h2, main #productList h2 {
   width: 100%;
@@ -412,7 +410,7 @@ main #productList .product .product-buttons button {
   background-color: transparent;
   transition: all 0.3s ease;
   font-family: "Afacad Flux", sans-serif;
-  width: 100px;
+  width: 80px;
   height: 50px;
   text-align: center;
   font-weight: 400;
@@ -422,6 +420,11 @@ main #productList .product .product-buttons button {
   background-color: #e3e3e3;
   box-shadow: 0px 0px 20px 1px black;
   box-shadow: none;
+  height: 30px;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  border-radius: 60px;
+  border: 1px solid #414141;
+  font-size: 14px;
 }
 main #editForm {
   width: 90%;
