--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -363,10 +363,13 @@ main #productList .product {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
   gap: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom: 1px dashed #414141;
 }
 main #productList .product div {
   display: flex;
@@ -376,7 +379,6 @@ main #productList .product div {
   width: 100%;
   height: 100px;
   gap: 5px;
-  border-bottom: 1px solid black;
 }
 main #productList .product div h4, main #productList .product div h2 {
   width: 100%;
@@ -401,7 +403,7 @@ main #productList .product div img {
   height: 100px;
 }
 main #productList .product .product-buttons {
-  width: 350px;
+  width: 250px;
   display: flex;
   justify-content: center;
   flex-direction: column;
