--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -373,7 +373,7 @@ main #productList .product {
 }
 main #productList .product div {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
   width: 100%;
@@ -403,7 +403,7 @@ main #productList .product div img {
   height: 100px;
 }
 main #productList .product .product-buttons {
-  width: 250px;
+  width: 200px;
   display: flex;
   justify-content: center;
   flex-direction: column;
