--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -432,7 +432,7 @@ main #productList .product .product-buttons button {
   border: 1px solid #414141;
   font-size: 14px;
 }
-main #editForm {
+main #editForm, main #editTransport {
   width: 90%;
   height: 500px;
   display: flex;
@@ -445,7 +445,7 @@ main #editForm {
   background-color: #e3e3e3;
   overflow: hidden;
 }
-main #editForm h2 {
+main #editForm h2, main #editTransport h2 {
   width: 100%;
   height: 30px;
   font-size: 16px;
@@ -457,7 +457,7 @@ main #editForm h2 {
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   padding-left: 10px;
 }
-main #editForm form {
+main #editForm form, main #editTransport form {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -466,20 +466,20 @@ main #editForm form {
   height: 100%;
   gap: 5px;
 }
-main #editForm form label {
+main #editForm form label, main #editTransport form label {
   width: 100%;
   height: 30px;
   font-size: 16px;
   padding-left: 10px;
 }
-main #editForm form input {
+main #editForm form input, main #editTransport form input {
   width: 95%;
   height: 40px;
   background-color: transparent;
   border: 1px solid black;
   outline: none;
 }
-main #editForm form button {
+main #editForm form button, main #editTransport form button {
   margin-top: 50px;
   padding: 2px;
   border: 0px solid #e3e3e3;
