--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -45,16 +45,14 @@ nav {
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 }
 nav .topNav {
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  background-color: #e3e3e3;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   cursor: default;
-  border-bottom-left-radius: 80px;
-  border-bottom-right-radius: 80px;
   gap: 20px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 }
@@ -64,7 +62,7 @@ nav .topNav img {
 }
 nav .topNav p {
   font-weight: 600;
-  font-size: 2.5vw;
+  font-size: 22px;
   color: #353535;
 }
 nav header {
