--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -108,12 +108,10 @@ nav{
     box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
     .topNav{
-        @include sizes(80%);
+        @include sizes(100%);
         @include displayFlex($flexDirection:row);
-        background-color: $lightFontColor;
+        background-image: $secondBackgroundImage;
         cursor: default;
-        border-bottom-left-radius: 80px;
-        border-bottom-right-radius: 80px;
         gap: 20px;
         box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
@@ -122,7 +120,7 @@ nav{
         }
         p{
             font-weight: $bold;
-            font-size: 2.5vw;
+            font-size: $lg;
             color: $darkFontColor;
         }
     }
