Cambios en el diseño

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -120,7 +120,7 @@ nav{
         }
         p{
             font-weight: $bold;
-            font-size: $lg;
+            font-size: $md;
             color: $darkFontColor;
         }
     }
