--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -112,7 +112,7 @@ nav{
         @include displayFlex($flexDirection:row);
         background-image: $secondBackgroundImage;
         cursor: default;
-        gap: 20px;
+        gap: 10px;
         box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
         img{
@@ -139,21 +139,18 @@ nav{
                 cursor: pointer;
             }
             img{
-                @include sizes(30px, auto);
+                @include sizes(50px, auto);
                 cursor: pointer;
                 transition: all 0.3s ease;
             }
             img:hover{
-                transform: scale(1.05)
+                transform: scale(1.05);
             }
             ul{
                 @include sizes(25%,50px);
                 @include displayFlex($flexDirection:row);
                 gap: 15px;
 
-                .contactSpan{
-                    cursor: pointer;
-                }
                 li{
                     @include sizes(100px,80px);
                     @include displayFlex();
@@ -375,7 +372,7 @@ main{
             box-shadow: 0px 0px 10px 1px $shadow;
 
             h3{
-                font-size: $slg;
+                font-size: $lg;
             }
             
             button{
