Cambios en el diseño

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -339,7 +339,7 @@ main{
                     @include displayFlex();
                     align-items: flex-start;
                     padding-left: 10px;
-                    font-size: $lg;
+                    font-size: $slg;
                     font-weight: $noBold;
                     border-top-right-radius: 15px;
                     border-bottom-right-radius: 15px;
