--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -308,6 +308,7 @@ main #categoriesSection {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  gap: 25px;
 }
 main #categoriesSection div {
   width: 80%;
