--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -348,7 +348,7 @@ main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCat
   flex-direction: column;
   align-items: center;
   align-items: flex-start;
-  font-size: 28px;
+  font-size: 22px;
   font-weight: 400;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -425,13 +425,11 @@ main #categoriesSection .ninethCategory {
 }
 main #categoriesSection #buttonSection {
   width: 100%;
-  height: 80px;
+  height: 40px;
   display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  gap: 10px;
-  padding: 20px;
 }
 main #categoriesSection #buttonSection button {
   padding: 5px;
@@ -439,7 +437,7 @@ main #categoriesSection #buttonSection button {
   border-radius: 30px;
   transition: all 0.3s ease;
   font-family: "Afacad Flux", sans-serif;
-  width: 250px;
+  width: 90%;
   height: 50px;
   text-align: center;
   font-weight: 400;
@@ -447,7 +445,9 @@ main #categoriesSection #buttonSection button {
   color: #353535;
   cursor: pointer;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
-  margin-bottom: 25px;
+  margin-top: 25px;
+  height: 30px;
+  font-size: 16px;
 }
 main #categoriesSection #buttonSection button:hover {
   transform: scale(1.02);
