--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -342,13 +342,14 @@ main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCatego
 }
 main #categoriesSection .firstCategory div h3, main #categoriesSection .secondCategory div h3, main #categoriesSection .thirdCategory div h3, main #categoriesSection .fourthCategory div h3,
 main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCategory div h3, main #categoriesSection .seventhCategory div h3, main #categoriesSection .eigthCategory div h3, main #categoriesSection .ninethCategory div h3 {
-  width: 65%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  font-size: 22px;
+  font-size: 16px;
+  height: 30px;
   font-weight: 400;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
