--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -330,6 +330,7 @@ main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, 
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
+  box-shadow: 0px 0px 30px 1px #414141;
 }
 main #categoriesSection .firstCategory div, main #categoriesSection .secondCategory div, main #categoriesSection .thirdCategory div, main #categoriesSection .fourthCategory div,
 main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCategory div, main #categoriesSection .seventhCategory div, main #categoriesSection .eigthCategory div, main #categoriesSection .ninethCategory div {
@@ -351,8 +352,6 @@ main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCat
   font-size: 16px;
   height: 30px;
   font-weight: 400;
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main #categoriesSection .secondCategory {
